LPS-46809 - Fix control panel home category header icon cut off from the top

--- a/portal-web/docroot/html/themes/control_panel/_diffs/css/custom.css
+++ b/portal-web/docroot/html/themes/control_panel/_diffs/css/custom.css
@@ -124,6 +124,7 @@ $dockbarOpenGradientStart: #0EA6F9;
 			display: block;
 			font-size: 24px;
 			font-weight: 100;
+			line-height: 1.5;
 			margin-bottom: 30px;
 			padding-left: 47px;
 		}
